<resources>
    <string name="app_name">ContourDetector</string>
    <string name="homepageTitle">欢迎</string>
    <string name="homepageButton1">开始</string>
    <string name="homepageButton2">历史</string>
    <string name="homepageButton3">导入</string>
    <string name="newHomeButton1">开始一次新的测量</string>
    <string name="newHomeButton2">查看测量历史记录</string>
    <string name="newHomeButton3">从Excel文件导入数据</string>
    <string name="newHomeButton4">设置一些系统参数</string>
    <string name="homepage_info">Powered By eandylgy@gmail.com, for Undergraduate Project</string>
    <string name="configurationTitle">设置</string>
    <string name="dataTitle">数据</string>
    <string name="pairedDeviceList">已配对设备列表</string>
    <string name="addedDeviceButton">添加新蓝牙设备</string>
    <string name="headTypeTitle">封头类型：</string>
    <string name="headType_ellipse">椭圆(点击可切换)</string>
    <string name="headType_butterfly">蝶形(点击可切换)</string>
    <string name="nonstandardType">非标封头：</string>
    <string name="nonstandardType_true">是(点击可切换)</string>
    <string name="nonstandardType_false">否(点击可切换)</string>
    <string name="trueText">是</string>
    <string name="falseText">否</string>
    <string name="insideRadiusText">封头内径：</string>
    <string name="curvedHeightText">曲面高度：</string>
    <string name="totalHeightText">封头总高：</string>
    <string name="parameterEdittextHint">单位：毫米(mm)</string>
    <string name="ellipseDetection">椭圆度检测：</string>
    <string name="deleted">使用测试数据</string>
    <string name="padHeightText">垫块高度：</string>
    <string name="convexBias">外凸偏差：</string>
    <string name="convexBiasHint">设定值为20毫米</string>
    <string name="concaveBias">内凹偏差：</string>
    <string name="concaveBiasHint">设定值为10毫米</string>
    <string name="saveConfiguration">保存当前参数</string>
    <string name="clearConfiguration">导入历史参数</string>
    <string name="type_import_title">已保存的历史参数</string>
    <string name="type_import_nothing">无保存的历史参数！</string>
    <string name="type_import_time">保存时间：</string>
    <string name="type_import_delete">删除参数</string>
    <string name="type_import_apply">应用参数</string>
    <string name="scannerTitle">扫描</string>
    <string name="scannerStart">开始测量</string>
    <string name="scannerResume">继续测量</string>
    <string name="scannerPause">暂停测量</string>
    <string name="scannerStop">终止测量</string>
    <string name="scannerCancelled">测量取消</string>
    <string name="scannerFinished">测量完成</string>
    <string name="scannerReady">准备就绪</string>
    <string name="scannerNoStop">尚未开始</string>
    <string name="scannerRestart">重新开始</string>
    <string name="scannerCancelledAlready">测量中止</string>
    <string name="scanner_currentD">当前距离：</string>
    <string name="scanner_currentA">当前角度：</string>
    <string name="scanner_currentXY">当前坐标：</string>
    <string name="scanner_currentProgress">当前进度：</string>
    <string name="dataOriginalChart">显示原始图线</string>
    <string name="dataBiasChart">显示偏差图线</string>
    <string name="dataSearchSet">设定内凹偏差、外凸偏差查询条件</string>
    <string name="condition_concaveBias">内凹偏差(正偏差) ≥</string>
    <string name="condition_intputHint">留空视为0(毫米)</string>
    <string name="condition_convexBias">外凸偏差(负偏差) ≥</string>
    <string name="condition_concaveMax">最大内凹偏差E1：</string>
    <string name="condition_convexMax">最大外凸偏差E2：</string>
    <string name="condition_confirm">应用并关闭</string>
    <string name="condition_cancel">取消</string>
    <string name="result_coordinateX">坐标X</string>
    <string name="result_coordinateY">坐标Y</string>
    <string name="result_bias">偏差(毫米)</string>
    <string name="report_title">测量结果报告(单位：mm)</string>
    <string name="report_depth">深度：</string>
    <string name="report_ellipseDetection">椭圆度：</string>
    <string name="report_diameter">直径：</string>
    <string name="report_type">类型：</string>
    <string name="report_shape">形状(是否合格)：</string>
    <string name="report_concavePosition">最大内凹偏差位置：</string>
    <string name="report_convexPosition">最大外凸偏差位置：</string>
    <string name="report_qualified">合格</string>
    <string name="report_unqualified">不合格</string>
    <string name="dialog_hide">隐藏</string>
    <string name="exit_title">即将退出，请选择：</string>
    <string name="exit_save">保存到测量历史（建议）</string>
    <string name="exit_excel">将所有数据保存为Excel报表</string>
    <string name="exit_txt">将简要报告保存为txt文本文档</string>
    <string name="exit_nothing">不保存</string>
    <string name="exit_cancel">取消</string>
    <string name="success_title">文件创建成功，请选择操作：</string>
    <string name="success_filename">文件名：</string>
    <string name="success_filepath">路径：</string>
    <string name="success_open">使用其他App打开</string>
    <string name="success_share">分享到…</string>
    <string name="success_backhomepage">返回首页</string>
    <string name="success_backexit">返回上一级</string>
    <string name="import_title">找到以下Excel文件：</string>
    <string name="import_notice_title">注意！必读！</string>
    <string name="import_notice_1">待导入的文件必须保存在Downloads目录下</string>
    <string name="import_notice_2">仅支持后缀为.xls的Excel文件</string>
    <string name="import_notice_3">文件格式必须和导出时的文件一致</string>
    <string name="import_notice_checkdir">查看本机的Downloads目录</string>
    <string name="import_notice_start">开始导入</string>
    <string name="import_item_delete">删除文件</string>
    <string name="import_item_checking">正在校验…</string>
    <string name="import_item_open">查看详细</string>
    <string name="import_item_invalid">校验失败</string>
    <string name="history_title">以下为历史测量记录：</string>
    <string name="history_time">记录保存时间：</string>
    <string name="history_delete">删除记录</string>
    <string name="history_open">查看详细</string>
    <string name="history_nothing">无保存的测量记录</string>
</resources>
