<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/white_roundcorner">

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textAlignment="center"
        android:text="@string/import_notice_title"/>

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        android:textAlignment="center"
        android:text="@string/import_notice_1"/>

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:textAllCaps="false"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        android:textAlignment="center"
        android:text="@string/import_notice_2"/>

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        android:textAlignment="center"
        android:text="@string/import_notice_3"/>

    <Button
        android:id="@+id/notice_check"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:textAlignment="center"
        android:text="@string/import_notice_checkdir"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/notice_backhomepage"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/success_backhomepage"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:background="@color/colorBlack"/>

        <Button
            android:id="@+id/notice_start"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/import_notice_start"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"/>

    </LinearLayout>

</LinearLayout>
