<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/colorWhite" >

    <TextView
        android:id="@+id/result_coordinateX"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/colorBlack"
        android:text="@string/result_coordinateX"
        android:textSize="16sp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/result_coordinateY"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/colorBlack"
        android:text="@string/result_coordinateY"
        android:textSize="16sp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/result_bias"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/colorBlack"
        android:text="@string/result_bias"
        android:textSize="16sp"
        android:textAlignment="center" />

</LinearLayout>
