<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_roundcorner"
    android:orientation="vertical">

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/report_title"
        android:textSize="18sp"
        android:textColor="@color/colorBlack"
        android:textAllCaps="false"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:enabled="false"
            android:text="@string/report_type"/>

        <EditText
            android:id="@+id/report_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="16sp"
            android:enabled="false"
            android:focusable="false"
            android:focusableInTouchMode="false" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:enabled="false"
            android:text="@string/report_ellipseDetection"/>

        <EditText
            android:id="@+id/report_ellipticity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="16sp"
            android:enabled="false"
            android:focusable="false"
            android:focusableInTouchMode="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:enabled="false"
            android:text="@string/report_diameter"/>

        <EditText
            android:id="@+id/report_diameter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="16sp"
            android:enabled="false"
            android:focusable="false"
            android:focusableInTouchMode="false" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorBlack"
            android:textAlignment="center"
            android:textSize="18sp"
            android:enabled="false"
            android:text="@string/report_depth"/>

        <EditText
            android:id="@+id/report_depth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="16sp"
            android:enabled="false"
            android:focusable="false"
            android:focusableInTouchMode="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:enabled="false"
            android:text="@string/condition_concaveMax"/>

        <EditText
            android:id="@+id/report_maxConcaveBias"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="16sp"
            android:enabled="false"
            android:focusable="false"
            android:focusableInTouchMode="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:enabled="false"
            android:text="@string/report_concavePosition"/>

        <EditText
            android:id="@+id/report_maxConcaveBiasPosition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="16sp"
            android:enabled="false"
            android:focusable="false"
            android:focusableInTouchMode="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:enabled="false"
            android:text="@string/condition_convexMax"/>

        <EditText
            android:id="@+id/report_maxConvexBias"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="16sp"
            android:enabled="false"
            android:focusable="false"
            android:focusableInTouchMode="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:enabled="false"
            android:text="@string/report_convexPosition"/>

        <EditText
            android:id="@+id/report_maxConvexBiasPosition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="16sp"
            android:enabled="false"
            android:focusable="false"
            android:focusableInTouchMode="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorBlack"
            android:text="@string/report_shape"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/report_shape"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@color/colorAccent"
            android:text="@string/report_qualified" />

    </LinearLayout>

    <Button
        android:id="@+id/report_hide"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:text="@string/dialog_hide"
        android:textSize="18sp" />

</LinearLayout>
